Grey out all unneeded export options when montecarlo option ticked in export panel

--- a/core/resources/l10n/messages.properties
+++ b/core/resources/l10n/messages.properties
@@ -562,6 +562,11 @@ SimExpPan.lbl.DecimalPlaces = Decimal places:
 SimExpPan.lbl.DecimalPlaces.ttip = The number of decimal places to use for the variables in the exported file.
 SimExpPan.lbl.ExponentialNotation = Use exponential notation
 SimExpPan.lbl.ExponentialNotation.ttip = Whether to use exponential notation for the variables (e.g. 1.5e-4) or not (e.g. 0.00015).
+
+SimExpPan.border.MonteCarlo = Monte-Carlo settings
+SimExpPan.lbl.MonteCarlo = Use Monte-Carlo Method
+SimExpPan.lbl.MonteCarlo.ttip = Whether to use the Monte-Carlo method for determining a landing "splash zone"
+
 SimExpPan.checkbox.Includesimudesc = Include simulation description
 SimExpPan.checkbox.ttip.Includesimudesc = Include a comment at the beginning of the file describing the simulation.
 SimExpPan.border.Comments = Comments
